<package format="2">
  <name>marble_multi_agent</name>
  <version>1.0.0</version>
  <description>
  Multi-Agent code for MARBLE
  </description>
  <maintainer email="dan.riley@colorado.edu">Dan Riley</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
