<package format="2">
  <name>bobcat</name>
  <version>1.0.0</version>
  <description>
  Multi-Agent code for MARBLE
  </description>
  <maintainer email="dan.riley@colorado.edu">Dan Riley</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>marble_artifact_detection_msgs</depend>
  <depend>marble_mapping</depend>
</package>
